@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-19T16:22:48Z",
+  "timestamp" : "2022-07-20T08:22:25Z",
   "count_outdated" : 368,
   "uniques_outdated" : 232,
   "count" : 392,
-  "uniques" : 247,
+  "uniques" : 248,
   "clones" : [
     {
       "timestamp": "2022-07-06T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -81,6 +81,13 @@
       "count_minmax": [ 1, 4 ],
       "uniques": 4,
       "uniques_minmax": [ 1, 4 ]
+    },
+    {
+      "timestamp": "2022-07-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
