@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2022-07-06T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -56,6 +56,11 @@
       "timestamp": "2022-07-16T00:00:00Z",
       "count": 4,
       "uniques": 4
+    },
+    {
+      "timestamp": "2022-07-20T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
