@@ -1,3 +1,10 @@
+2022-07-20T08:22:25Z:
+* notice: last 14d: unq all: 5 24
+* notice: prev accum: outdated-unq outdated-all / unq all: 232 368 / 247 392
+* notice: next accum: outdated-unq outdated-all / unq all: 232 368 / 248 392
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-07-06 2022-07-20]
+
 2022-07-19T16:22:48Z:
 * notice: last 14d: unq all: 5 24
 * notice: prev accum: outdated-unq outdated-all / unq all: 231 367 / 247 392
